Initial commit of restored maritime optimizer
